Enhance UI loading and Modal

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3,4 +3,25 @@
 		padding-left:0.5rem !important;
 		padding-right:0.5rem !important;
 	}
+	
+	#overlayloading {
+		padding-top:50% !important;
+	}
+	
+}
+
+#overlayloading {
+  display:none;
+  background: #ffffff;
+  color: #666666;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 5000;
+  top: 0;
+  left: 0;
+  float: left;
+  text-align: center;
+  padding-top: 15%;
+  opacity: .80;
 }
