--- a/src/main/resources/templates/salesreport.jrxml
+++ b/src/main/resources/templates/salesreport.jrxml
@@ -14,6 +14,7 @@
 	<parameter name="subTitle" class="java.lang.String"/>
 	<parameter name="address" class="java.lang.String"/>
 	<parameter name="CHART_DATA" class="java.util.List"/>
+	<parameter name="branchName" class="java.lang.String"/>
 	<field name="transactionId" class="java.lang.String"/>
 	<field name="paidDate" class="java.util.Date"/>
 	<field name="ticketPurchased" class="java.lang.Integer"/>
@@ -25,92 +26,122 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="155" splitType="Stretch">
+		<band height="228" splitType="Stretch">
 			<textField>
-				<reportElement x="-20" y="0" width="595" height="30" uuid="411ab57e-6e60-4821-a920-dc0d98f7a594"/>
+				<reportElement x="0" y="40" width="554" height="30" uuid="411ab57e-6e60-4821-a920-dc0d98f7a594"/>
 				<textElement textAlignment="Center">
 					<font size="20"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{reportTitle}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="30" width="560" height="30" uuid="8dc4b95a-6734-42f3-a61a-0d3cf45c6e55"/>
+				<reportElement x="0" y="70" width="559" height="30" uuid="8dc4b95a-6734-42f3-a61a-0d3cf45c6e55"/>
 				<textElement textAlignment="Center">
 					<font size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{subTitle}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="70" width="240" height="80" uuid="d1e9b012-b0d7-4a46-b81a-3f10f6f61873"/>
+				<reportElement x="0" y="130" width="234" height="90" uuid="d1e9b012-b0d7-4a46-b81a-3f10f6f61873"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{address}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="330" y="70" width="230" height="60" uuid="b11f17a5-2309-49d0-a5de-3c12b322f192"/>
-				<textElement textAlignment="Right">
-					<font size="12"/>
+				<reportElement x="350" y="0" width="204" height="30" uuid="b11f17a5-2309-49d0-a5de-3c12b322f192"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Generated On :" + new java.util.Date()]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Generated On :" + new java.text.SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new java.util.Date())]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="1" y="0" width="100" height="30" forecolor="#4E73DF" uuid="55bc896d-2e0e-44d4-9b85-9841cf1f7408"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" size="16" isBold="true"/>
+				</textElement>
+				<text><![CDATA[CINEVERSE]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="0" y="110" width="234" height="20" uuid="f7334bee-801a-4b8c-b0cd-0a416e426a91"/>
+				<textElement textAlignment="Left">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{branchName}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="237" splitType="Stretch">
-			<lineChart>
-				<chart renderType="draw" theme="default">
-					<reportElement key="" x="0" y="10" width="560" height="210" uuid="e99ac438-b92d-436e-ab56-395dc2280845"/>
-					<chartTitle/>
+		<band height="213" splitType="Stretch">
+			<timeSeriesChart>
+				<chart isShowLegend="false" evaluationTime="Report">
+					<reportElement x="1" y="0" width="553" height="200" uuid="1526a310-2e95-4a02-9f29-0f173044f7cf">
+						<property name="com.jaspersoft.studio.unit.x" value=""/>
+						<property name="com.jaspersoft.studio.unit.y">
+							<![CDATA["RM"]]>
+						</property>
+					</reportElement>
+					<chartTitle>
+						<titleExpression><![CDATA["Sales Summary"]]></titleExpression>
+					</chartTitle>
 					<chartSubtitle/>
 					<chartLegend/>
 				</chart>
-				<categoryDataset>
+				<timeSeriesDataset>
 					<dataset resetType="Report">
-						<datasetRun subDataset="GraphDataSet" uuid="96ee9d21-f581-4eb6-b16a-acf4a6885efe">
+						<datasetRun subDataset="GraphDataSet" uuid="ac5f9d0a-ccc7-431c-8bd6-8bed42b81f31">
 							<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{CHART_DATA})]]></dataSourceExpression>
 						</datasetRun>
 					</dataset>
-					<categorySeries>
+					<timeSeries>
 						<seriesExpression><![CDATA["Sales"]]></seriesExpression>
-						<categoryExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy").format($F{date})]]></categoryExpression>
+						<timePeriodExpression><![CDATA[$F{date}]]></timePeriodExpression>
 						<valueExpression><![CDATA[$F{price}]]></valueExpression>
-						<labelExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy").format($F{date})]]></labelExpression>
-					</categorySeries>
-				</categoryDataset>
-				<linePlot>
-					<plot/>
-					<categoryAxisFormat>
+						<labelExpression><![CDATA[new java.text.SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></labelExpression>
+					</timeSeries>
+				</timeSeriesDataset>
+				<timeSeriesPlot>
+					<plot>
+						<seriesColor seriesOrder="0" color="#4E73DF"/>
+					</plot>
+					<timeAxisFormat>
 						<axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
-					</categoryAxisFormat>
+					</timeAxisFormat>
 					<valueAxisFormat>
-						<axisFormat labelColor="#000000" tickLabelColor="#000000" tickLabelMask="#" axisLineColor="#000000"/>
+						<axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
 					</valueAxisFormat>
-				</linePlot>
-			</lineChart>
+				</timeSeriesPlot>
+			</timeSeriesChart>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="21" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<staticText>
 				<reportElement x="0" y="0" width="190" height="21" uuid="7c92c781-b13c-4348-bf10-bfcc90869504">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b52aa052-9b86-4ce5-ae02-ba544d0b7ad4"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Transaction ID]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="330" y="0" width="120" height="21" uuid="096e9029-1d62-421e-b041-54f05b88f18e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="aa3816ed-8862-4894-bef4-0d7b71ae2797"/>
 				</reportElement>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Payment Date]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="220" y="0" width="80" height="21" uuid="5abd2ffd-3474-4ac9-a97f-ba34940ca042">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="efa53650-5da2-4158-9e70-79370b1e4227"/>
 				</reportElement>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Ticket Purchased
 ]]></text>
 			</staticText>
@@ -118,50 +149,53 @@
 				<reportElement x="480" y="0" width="74" height="21" uuid="271e25a1-9f68-4985-9268-01e41b50cba8">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d0df1b2c-d050-4caa-a481-2e92ca67b693"/>
 				</reportElement>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Amount (RM)]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="49" splitType="Stretch">
+		<band height="36" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="19" width="190" height="30" uuid="a680ed09-472e-4934-ae99-dfab192eb41a">
+				<reportElement x="0" y="0" width="190" height="26" forecolor="#212529" uuid="a680ed09-472e-4934-ae99-dfab192eb41a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b52aa052-9b86-4ce5-ae02-ba544d0b7ad4"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{transactionId}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="220" y="19" width="80" height="30" uuid="83cf8997-4db5-4ba2-a30d-8d6934c81fab">
+				<reportElement x="220" y="0" width="80" height="26" forecolor="#212529" uuid="83cf8997-4db5-4ba2-a30d-8d6934c81fab">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="efa53650-5da2-4158-9e70-79370b1e4227"/>
 				</reportElement>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{ticketPurchased}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="330" y="19" width="120" height="30" uuid="8ff3e702-1599-48d2-9474-0f6f48b93e6f">
+				<reportElement x="330" y="0" width="120" height="26" forecolor="#212529" uuid="8ff3e702-1599-48d2-9474-0f6f48b93e6f">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="aa3816ed-8862-4894-bef4-0d7b71ae2797"/>
 				</reportElement>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{paidDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="480" y="19" width="74" height="30" uuid="ba5a3729-76b1-4011-a25e-54850d151ef9">
+				<reportElement x="481" y="0" width="74" height="26" forecolor="#212529" uuid="ba5a3729-76b1-4011-a25e-54850d151ef9">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d0df1b2c-d050-4caa-a481-2e92ca67b693"/>
 				</reportElement>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{amountPaid}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[String.format("%.2f",$F{amountPaid})]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="34" splitType="Stretch">
 			<textField>
-				<reportElement x="480" y="4" width="75" height="30" uuid="af8946d5-45de-4f30-81bb-0b313ba85c11"/>
-				<textFieldExpression><![CDATA["Sum : RM " + String.valueOf($V{total})]]></textFieldExpression>
+				<reportElement x="420" y="20" width="135" height="14" uuid="af8946d5-45de-4f30-81bb-0b313ba85c11"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Gross Profit : RM " + String.format("%.2f",$V{total})]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="2" width="553" height="1" uuid="875810dc-b54f-4d73-a003-0cfd2e0dae0b"/>
+				<reportElement x="1" y="10" width="553" height="1" uuid="875810dc-b54f-4d73-a003-0cfd2e0dae0b"/>
 			</line>
 		</band>
 	</columnFooter>
@@ -170,7 +204,7 @@
 			<textField>
 				<reportElement x="180" y="20" width="200" height="30" uuid="94f38afc-f95c-4515-b814-f5e789db40eb"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER} + "/" + $V{PAGE_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
