--- a/src/main/resources/templates/salesreport.jrxml
+++ b/src/main/resources/templates/salesreport.jrxml
@@ -28,31 +28,22 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table 1_TH" mode="Opaque" backcolor="#F0F8FF">
+	<style name="Table 1_TH" mode="Opaque" backcolor="#FFFFFF">
 		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table 1_CH" mode="Opaque" backcolor="#BFE1FF">
+	<style name="Table 1_CH" mode="Opaque" backcolor="#FFFFFF">
 		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
 	<style name="Table 1_TD" mode="Opaque" backcolor="#FFFFFF">
 		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
 	<subDataset name="GraphDataSet" uuid="e022ffb4-0151-441b-8b12-e0bec2297a99">
@@ -97,23 +88,9 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="228" splitType="Stretch">
+		<band height="201" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="40" width="554" height="30" uuid="411ab57e-6e60-4821-a920-dc0d98f7a594"/>
-				<textElement textAlignment="Center">
-					<font size="20"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{reportTitle}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="0" y="70" width="559" height="30" uuid="8dc4b95a-6734-42f3-a61a-0d3cf45c6e55"/>
-				<textElement textAlignment="Center">
-					<font size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{subTitle}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="0" y="130" width="234" height="90" uuid="d1e9b012-b0d7-4a46-b81a-3f10f6f61873"/>
+				<reportElement x="0" y="100" width="234" height="90" uuid="d1e9b012-b0d7-4a46-b81a-3f10f6f61873"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
@@ -127,14 +104,16 @@
 				<textFieldExpression><![CDATA["Generated On :" + new java.text.SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new java.util.Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="1" y="0" width="100" height="30" forecolor="#4E73DF" uuid="55bc896d-2e0e-44d4-9b85-9841cf1f7408"/>
+				<reportElement x="0" y="0" width="180" height="50" forecolor="#4E73DF" uuid="55bc896d-2e0e-44d4-9b85-9841cf1f7408">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans Mono" size="16" isBold="true"/>
+					<font fontName="DejaVu Sans Mono" size="28" isBold="true"/>
 				</textElement>
 				<text><![CDATA[CINEVERSE]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="110" width="234" height="20" uuid="f7334bee-801a-4b8c-b0cd-0a416e426a91"/>
+				<reportElement x="0" y="80" width="234" height="20" uuid="f7334bee-801a-4b8c-b0cd-0a416e426a91"/>
 				<textElement textAlignment="Left">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -154,9 +133,11 @@
 					</reportElement>
 					<chartTitle>
 						<font fontName="Arial" size="12"/>
-						<titleExpression><![CDATA["Sales Summary"]]></titleExpression>
+						<titleExpression><![CDATA[$P{reportTitle}]]></titleExpression>
 					</chartTitle>
-					<chartSubtitle/>
+					<chartSubtitle>
+						<subtitleExpression><![CDATA[$P{subTitle}]]></subtitleExpression>
+					</chartSubtitle>
 					<chartLegend/>
 				</chart>
 				<timeSeriesDataset>
@@ -208,6 +189,7 @@
 						<jr:tableFooter style="Table 1_TH" height="30" rowSpan="1">
 							<box>
 								<topPen lineWidth="2.0"/>
+								<bottomPen lineWidth="2.0"/>
 							</box>
 						</jr:tableFooter>
 						<jr:columnHeader style="Table 1_CH" height="40" rowSpan="1">
@@ -241,6 +223,7 @@
 						<jr:tableFooter style="Table 1_TH" height="30" rowSpan="1">
 							<box>
 								<topPen lineWidth="2.0"/>
+								<bottomPen lineWidth="2.0"/>
 							</box>
 						</jr:tableFooter>
 						<jr:columnHeader style="Table 1_CH" height="40" rowSpan="1">
@@ -267,6 +250,7 @@
 						<jr:tableFooter style="Table 1_TH" height="30" rowSpan="1">
 							<box>
 								<topPen lineWidth="2.0"/>
+								<bottomPen lineWidth="2.0"/>
 							</box>
 							<textField>
 								<reportElement x="0" y="0" width="124" height="30" uuid="135a1b32-b914-4e1e-bb2c-695c571adb24"/>
@@ -301,6 +285,7 @@
 						<jr:tableFooter style="Table 1_TH" height="30" rowSpan="1">
 							<box>
 								<topPen lineWidth="2.0"/>
+								<bottomPen lineWidth="2.0"/>
 							</box>
 							<textField>
 								<reportElement x="0" y="0" width="121" height="30" uuid="1cfff1db-2647-450d-b134-652870d081c2"/>
