--- a/src/main/resources/templates/salesreport.jrxml
+++ b/src/main/resources/templates/salesreport.jrxml
@@ -218,8 +218,8 @@
 								<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 								<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 							</box>
-							<textField>
-								<reportElement x="0" y="0" width="200" height="30" forecolor="#4D4444" uuid="03ee3ed1-a7ce-4b3e-a848-7d2acd16c2e8">
+							<textField textAdjust="StretchHeight">
+								<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="200" height="30" forecolor="#4D4444" uuid="03ee3ed1-a7ce-4b3e-a848-7d2acd16c2e8">
 									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
 								<box padding="5"/>
